--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <script src="assets/func.js"></script>
     <title>Portfolio</title>
 </head>
+
+<header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>SKills</li>
+            <li>Work</li>
+            <li>Project</li>
+        </ul>
+    </nav>
+</header>
 <body>
 
-    <h1>Main header</h1>
+    
     
 </body>
 </html>
