--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
     <script src="assets/func.js"></script>
     <title>Portfolio</title>
-</head>
+  </head>
 
-<header>
+  <header>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>SKills</li>
-            <li>Work</li>
-            <li>Project</li>
-        </ul>
+      <ul class="nav-links">
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Skills">SKills</a></li>
+        <li><a href="#Work">Work</a></li>
+        <li><a href="#Project">Project</a></li>
+      </ul>
     </nav>
-</header>
-<body>
-
-    
-    
-</body>
+  </header>
+  <body></body>
 </html>
