--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
-    <script src="assets/func.js"></script>
+    <link rel="stylesheet" href="assets/mediaqueries.css" />
+    
     <title>Portfolio</title>
   </head>
 
   <header>
-    <nav>
+    <nav id="desktop-nav">
+      <div class="logo">Swet Singh</div>
       <ul class="nav-links">
         <li><a href="#Home">Home</a></li>
         <li><a href="#About">About</a></li>
@@ -18,4 +20,5 @@
     </nav>
   </header>
   <body></body>
+  <script src="assets/func.js"></script>
 </html>
