--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
         <li><a href="#Project">Project</a></li>
       </ul>
     </nav>
+    <nav id="hamburger-nav">
+      <div class="logo">Swet Singh</div>
+        <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu-links">
+        <li><a href="#Home" onclick="toggleMenu()">Home</a></li>
+        <li><a href="#About" onclick="toggleMenu()">About</a></li>
+        <li><a href="#Skills" onclick="toggleMenu()">SKills</a></li>
+        <li><a href="#Work" onclick="toggleMenu()">Work</a></li>
+        <li><a href="#Project" onclick="toggleMenu()">Project</a></li>
+        </div>
+      </div>
+
+
+
+    </nav>  
+    </div>
   </header>
   <body></body>
   <script src="assets/func.js"></script>
