--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             src="./img/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://linkedin.com/in/iamswet'"
           />
           <img
             src="./img/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/iamswet'"
           />
         </div>
       </div>
@@ -343,7 +343,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/iamswet">LinkedIn</a></p>
         </div>
       </div>
     </section>
