--- a/index.html
+++ b/index.html
@@ -265,19 +265,19 @@
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./img/img1.jpg" alt="Project 1" class="project-img" />
+              <img src="./img/img2.jpg" alt="Project 1" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Amazon Clone</h2>
+            <h2 class="experience-sub-title project-title">Calculator</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/iamswet/Amazon-Clone'"
+                onclick="location.href='https://github.com/iamswet/Calculator'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://iamswet.github.io/Amazon-Clone/Amazon%20Clone/main.html'"
+                onclick="location.href='https://iamswet.github.io/Calculator/Page/main.html'"
               >
                 Live Demo
               </button>
@@ -287,22 +287,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./img/img3.jpg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">S.T.U. Reach</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/iamswet/S.T.U.-Reach'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/iamswet/S.T.U.-Reach/blob/main/proj.py'"
               >
                 Live Demo
               </button>
