--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel=stylesheet href=https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh>
       <link rel=stylesheet href=style.css>
       <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel=stylesheet>
-      <link rel=stylesheet href=https://kerinpithawala.netlify.app/css/highlight.css>
+      <link rel=stylesheet href="assets/highlight.css">
       <link rel=stylesheet href=https://use.fontawesome.com/releases/v5.3.1/css/all.css integrity=sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU crossorigin=anonymous>
       <meta name=author content="Swet Singh">
       <meta name=theme-color content="#000000">
@@ -31,7 +31,7 @@
             <img src=image/sim.png class="rounded-circle mb-3" width=160px>
             <h1 class=heading>hello world, I am <span class=highlight>Swet Singh</span></h1>
             <p class=text-muted>I am a final year Computer Engineering Student with experience in Research and Web Development.I am looking for full-time opportunities.</p>
-            <div class="social my-4"><a target=_blank href=https://github.com/iamswet rel=me><i class="fab fa-github"></i></a><a target=_blank href=https://www.linkedin.com/in/iamswet rel=me><i class="fab fa-linkedin"></i></a><a target=_blank href=https://www.youtube.com/channel/UCORA8Kw18cXp-JPwyml-tPA rel=me><i class="fab fa-youtube"></i></a><a target=_blank href=https://kerinpithawala.github.io/Blog/ download><i class="fas fa-book-reader"></i></a><a target=_blank href=mailto:hiswets3@gmail.com download><i class="fas fa-envelope"></i></a></div>
+            <div class="social my-4"><a target=_blank href=https://github.com/iamswet rel=me><i class="fab fa-github"></i></a><a target=_blank href=https://www.linkedin.com/in/iamswet rel=me><i class="fab fa-linkedin"></i></a><a target=_blank href=mailto:hiswets3@gmail.com download><i class="fas fa-envelope"></i></a></div>
    
          </div>
       </section>
@@ -41,30 +41,38 @@
             <div class="row justify-content-md-center text-center">
                <div class="col-12 col-lg-6 col-md-6 mb-3">
                   <div class="card p-4">
-                     <i class="mt-3 fa fa-shopping-cart fa-3x"></i>
-                     <h5 class=mt-4><a href=https://github.com/KerinPithawala/Frizzle.git style=color:#000>Gada Electronics</a></h5>
+                     <center>
+                        <img src="image/cart.png" height="25%" width="25%">
+                     </center>
+                     <h5 class=mt-4><a href=https://github.com/iamswet/Gada-Electronics style=color:#000>Gada Electronics</a></h5>
                      <p class=text-muted>A e-commerce portal for Electronic devices.</p>
                   </div>
                </div>
                <div class="col-12 col-lg-6 col-md-6 mb-3">
                   <div class="card p-4">
-                     <i class="mt-3 fa fa-camera fa-3x"></i>
-                     <h5 class=mt-4><a href=https://github.com/KerinPithawala/Videosteganography-fyp.git style=color:#000>Video-Steganography</a></h5>
-                     <p class=text-muted>Hide and decode text messages in video.</p>
+                     <center>
+                        <img src="image/net.png" height="25%" width="25%">
+                     </center>
+                     <h5 class=mt-4><a href=https://github.com/iamswet/Netflix-Clone- style=color:#000>Netflix Clone</a></h5>
+                     <p class=text-muted>Cloned Netflix homepage from scratch</p>
                   </div>
                </div>
                <div class="col-12 col-lg-6 col-md-6 mb-3">
                   <div class="card p-4">
-                     <i class="mt-3 fa fa-clock fa-3x"></i>
-                     <h5 class=mt-4><a href=https://github.com/KerinPithawala/Dynome.git style=color:#000>TimeSync</a></h5>
-                     <p class=text-muted>Converts the time according to located timezone.</p>
+                     <center>
+                        <img src="image/cloud.png" height="25%" width="25%">
+                     </center>
+                     <h5 class=mt-4><a href=https://github.com/iamswet/Weather-App style=color:#000>Weather App</a></h5>
+                     <p class=text-muted>Take in real time reponses for the current and future weather predictions.</p>
                   </div>
                </div>
                <div class="col-12 col-lg-6 col-md-6 mb-3">
                   <div class="card p-4">
-                     <i class="mt-3 fa fa-book fa-3x"></i>
-                     <h5 class=mt-4><a href=https://kerinpithawala.github.io/Blog/ style=color:#000>Bloggin</a></h5>
-                     <p class=text-muted>A blogging page on the topics of Data Structures and Algorithms.</p>
+                     <center>
+                        <img src="image/hand.png" height="18%" width="18%">
+                     </center>
+                     <h5 class=mt-4><a href=https://github.com/iamswet/Hand-Gesture-Recognition style=color:#000>Hand Gesture Recognition</a></h5>
+                     <p class=text-muted>Using OpenCV and MediaPipe, developed a hand gesture Recognition project</p>
                   </div>
                </div>
             </div>
@@ -77,7 +85,7 @@
                   <div class="timeline-content right">
                      <span class=date>July 2024 - September 2024</span>
                      <h6 class="h3 my-2">Full Stack Developer Intern - Cains Creations</h6>
-                     <a target=_blank href=https://www.zs.com/><i class="fas fa-link"></i>https://www.zs.com/</a>
+                     <a target=_blank href=https://www.linkedin.com/posts/iamswet_internship-fullstackdeveloper-webdevelopment-activity-7209619793262366721-av4J?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>CainsCreations</a>
                      <p>Collabarated with senior devs and successfully integrated REST APIs with frontend. provided maintained github and practiced version control</p>
                   </div>
                </div>
@@ -86,7 +94,7 @@
                   <div class=timeline-content>
                      <span class=date>December 2023 - May 2024</span>
                      <h6 class="h3 my-2">Web Developer Intern - Ebiosketch Technologies Pvt. Ltd.</h6>
-                     <a target=_blank href=https://srl.ou.edu/><i class="fas fa-link"></i>https://srl.ou.edu/</a>
+                     <a target=_blank href=https://www.linkedin.com/posts/iamswet_webdevelopment-tech-careergrowth-activity-7205969291316203520-7l0n?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>Ebiosketch</a>
                      <p>Developed and deployed websites from scratch.</p>
                   </div>
                </div>
@@ -95,7 +103,7 @@
                   <div class="timeline-content right">
                      <span class=date>July 2023 - June 2024</span>
                      <h6 class="h3 my-2">Technical Lead - Coding Club NMIMS</h6>
-                     <a target=_blank href=https://bit.ly/39bOVGa><i class="fas fa-link"></i>https://bit.ly/39bOVGa</a>
+                     <a target=_blank href=https://www.linkedin.com/posts/iamswet_coding-codingclub-tech-activity-7098538451016286208-BMfq?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>CodingClub</a>
                      <p>Lead a team of 20+ to efficiently collabarate and work upon multiple project leading to successful events and meeting work deadlines.</p>
                   </div>
                </div>
@@ -104,7 +112,7 @@
                   <div class=timeline-content>
                      <span class=date>August 2023 - June 2024</span>
                      <h6 class="h3 my-2">Technical Sub Core - GDSC</h6>
-                     <a target=_blank href=https://bit.ly/2V9jwjJ><i class="fas fa-link"></i>https://bit.ly/2V9jwjJ</a>
+                     <a target=_blank href=https://www.linkedin.com/posts/iamswet_gdsc-technicalsubcore-newbeginnings-activity-7102001346605711360-6dC5?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>GDSC</a>
                      <p>Completed work deadlines and proved to be a valuable asset to the entire team.</p>
                   </div>
                </div>
@@ -127,85 +135,15 @@
          <section id=experience class=blue>
          <h2 class=heading>Achievements</h2>
          <div id=timeline>
+            
+            
             <div class="timeline-item clearfix">
                <div class=timeline-icon></div>
                <div class="timeline-content right">
-                  <span class=date>April 2022</span>
-                  <h6 class="h3 my-2">cdCon Student Scholarship RecipientcdCon</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3Sp45gD><i class="fas fa-link"></i>https://bit.ly/3Sp45gD</a>
-                  <p>Got funding from the Linux Foundation to attend the cdCon conference in June 2022 at Austin, USA.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class=timeline-content>
-                  <span class=date>February 2022</span>
-                  <h6 class="h3 my-2">Semi Finalist in Fix-a-thon Hackathon</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3SrKH2s><i class="fas fa-link"></i>https://bit.ly/3SrKH2s</a>
-                  <p>Selected among top 50 for Microsoft Fix-a-thon hackathon from a pool of over 12000 applicants across India.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class="timeline-content right">
-                  <span class=date>January 2022</span>
-                  <h6 class="h3 my-2">Became Gold Ambassador</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/2Z3v627><i class="fas fa-link"></i>https://bit.ly/2Z3v627</a>
-                  <p>Selected by the Microsoft team in from the 1200+ Ambassadors in India.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class=timeline-content>
-                  <span class=date>October 2021</span>
-                  <h6 class="h3 my-2">Completed hacktoberfest challenge</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/2Z3v627><i class="fas fa-link"></i>https://bit.ly/2Z3v627</a>
-                  <p>Contributed code to Hacktoberfest approved repositories during October,2021.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class="timeline-content right">
-                  <span class=date>October 2021</span>
-                  <h6 class="h3 my-2">Microsoft Azure Fundamentals Certification</h6>
-                  <a style=font-size:14px target=_blank href=shorturl.at/uHKTV><i class="fas fa-link"></i>shorturl.at/uHKTV</a>
-                  <p>Cleared AZ-900 certification to become Microsoft Certified: Azure Fundamentals.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class=timeline-content>
-                  <span class=date>September 2021</span>
-                  <h6 class="h3 my-2">Scholarship Recipient</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3AUAGBX><i class="fas fa-link"></i>https://bit.ly/3AUAGBX</a>
-                  <p>Got scholarship from Microsoft Cloud Advocacy team to attend virtual Grace Hopper Celebration 2021.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class="timeline-content right">
-                  <span class=date>July 2021</span>
-                  <h6 class="h3 my-2">Paper Presentation</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3i2TaZZ><i class="fas fa-link"></i>https://bit.ly/3i2TaZZ</a>
-                  <p>Presented my research on 'Detecting phishing in short-URL using classification techniques' at 12th International Conference on Computing, Communication, and Networking Technologies at Indian Institute of Technology, Kharagpur.</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class=timeline-content>
-                  <span class=date>May 2021</span>
-                  <h6 class="h3 my-2">Beta Ambassador</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3AfD4TI><i class="fas fa-link"></i>https://bit.ly/3AfD4TI</a>
-                  <p>Got advancement in Microsoft Learn Student Ambassador Community</p>
-               </div>
-            </div>
-            <div class="timeline-item clearfix">
-               <div class=timeline-icon></div>
-               <div class="timeline-content right">
-                  <span class=date>April 2021</span>
-                  <h6 class="h3 my-2">Summer Research Fellow</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3hX8veh><i class="fas fa-link"></i>https://bit.ly/3hX8veh</a>
-                  <p>Selected for Summer Research Fellowship program by Indian Academy of Sciences.</p>
+                  <span class=date>March 2024</span>
+                  <h6 class="h3 my-2">1<sup>st</sup> position at Dev-o-Thon hackathon</h6>
+                  <a style=font-size:14px target=_blank href=https://www.linkedin.com/posts/iamswet_hackathon-webdevelopment-teamwork-activity-7176301053611524097-eAQt?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>Dev-O-Thon</a>
+                  <p>Secured 1st place in Dev-o-thon hackathon conducted at inter college level.</p>
                </div>
             </div>
             <div class="timeline-item clearfix">
@@ -213,7 +151,7 @@
                <div class=timeline-content>
                   <span class=date>December 2023</span>
                   <h6 class="h3 my-2">3<sup>rd</sup> position at hour of Code event</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/36aQv9C><i class="fas fa-link"></i>https://bit.ly/36aQv9C</a>
+                  <a style=font-size:14px target=_blank href=https://www.linkedin.com/posts/iamswet_codingcompetition-hourofcode-thirdplace-activity-7160338630207549440-IRRX?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>HourOfCode</a>
                   <p>Cleared all 3 competetive programming questions in stipulated time interval.</p>
                </div>
             </div>
@@ -222,7 +160,7 @@
                <div class="timeline-content right">
                   <span class=date>October 2023</span>
                   <h6 class="h3 my-2">Github Session</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3dCP2gp><i class="fas fa-link"></i>https://bit.ly/3dCP2gp</a>
+                  <a style=font-size:14px target=_blank href=https://www.linkedin.com/posts/iamswet_git-github-versioncontrol-activity-7113450453325017088-yuGg?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>GitHub</a>
                   <p>Took an educative session on Git & GitHub for an audience of 200+ students.</p>
                </div>
             </div>
@@ -231,7 +169,7 @@
                <div class=timeline-content>
                   <span class=date>September 2023</span>
                   <h6 class="h3 my-2">2<sup>nd</sup> place CodeKraken Hackathon</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3hUWXsa><i class="fas fa-link"></i>https://bit.ly/3hUWXsa</a>
+                  <a style=font-size:14px target=_blank href=https://www.linkedin.com/posts/iamswet_codekraken-gdsc-google-activity-7107835674451476480-dLGZ?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD1xc1YBeOpq0QY8E-bvYNctCqBDcmBdTqQ><i class="fas fa-link"></i>CodeKraken</a>
                   <p>Developed a real time Student-teacher project. The hackathon was hosted for different colleges across Maharashtra.</p>
                </div>
             </div>
@@ -240,7 +178,7 @@
                <div class="timeline-content right">
                   <span class=date>March 2023</span>
                   <h6 class="h3 my-2">1<sup>st</sup> position Code Bug at Ambiora 2k23</h6>
-                  <a style=font-size:14px target=_blank href=https://bit.ly/3dyRIeX><i class="fas fa-link"></i>https://bit.ly/3dyRIeX</a>
+                  <a style=font-size:14px target=_blank href=https://www.linkedin.com/in/iamswet/><i class="fas fa-link"></i>CodeBug</a>
                   <p>Secured first place in the 1st year of college hosted across multiple campuses at annual college tech fest.</p>
                </div>
             </div>
